[package]
name = "sctk_egui_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.30"
wayland-backend = { version = "0.1", features = ["client_system"] }
smithay-client-toolkit = "0.17"
egui = "0.22"
egui_glow = "0.22"
glutin = "0.29"
env_logger = "0.10"
